fix contrast

--- a/src/client/stylesheets/components/copy-to-clipboard/_copy-to-clipboard.scss
+++ b/src/client/stylesheets/components/copy-to-clipboard/_copy-to-clipboard.scss
@@ -35,7 +35,7 @@
   }
 
   &:disabled {
-    background-color: #ffffff;
+    background-color: #f3f2f1;
     border-color: #b1b4b6;
     color: #b1b4b6;
     cursor: not-allowed;
